// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform: snapshots > async function 1`] = `
"import { __def as __zenbu_def, __ref as __zenbu_ref } from "@zenbu/advice/runtime";
__zenbu_def("test.ts", "fetchData", async function () {
  return 1;
});
const fetchData = __zenbu_ref("test.ts", "fetchData");"
`;

exports[`transform: snapshots > const arrow 1`] = `
"import { __def as __zenbu_def, __ref as __zenbu_ref } from "@zenbu/advice/runtime";
__zenbu_def("test.ts", "foo", () => 42);
const foo = __zenbu_ref("test.ts", "foo");"
`;

exports[`transform: snapshots > function declaration 1`] = `
"import { __def as __zenbu_def, __ref as __zenbu_ref } from "@zenbu/advice/runtime";
__zenbu_def("test.ts", "foo", function () {
  return 1;
});
const foo = __zenbu_ref("test.ts", "foo");"
`;

exports[`transform: snapshots > generator function 1`] = `
"import { __def as __zenbu_def, __ref as __zenbu_ref } from "@zenbu/advice/runtime";
__zenbu_def("test.ts", "gen", function* () {
  yield 1;
});
const gen = __zenbu_ref("test.ts", "gen");"
`;
